--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -1184,7 +1184,7 @@
      <widget class="QPushButton" name="PWS_ButtonCreatePW">
       <property name="geometry">
        <rect>
-        <x>430</x>
+        <x>410</x>
         <y>140</y>
         <width>201</width>
         <height>23</height>
@@ -1192,6 +1192,19 @@
       </property>
       <property name="text">
        <string>Generate random password</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="PWS_ButtonEnable">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>190</y>
+        <width>131</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Unlock static passwords</string>
       </property>
      </widget>
     </widget>
