--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/images">
         <file>CS_icon.png</file>
+        <file>ProgressWheel.GIF</file>
     </qresource>
 </RCC>
