--- a/stick20changepassworddialog.ui
+++ b/stick20changepassworddialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>248</width>
-    <height>259</height>
+    <width>257</width>
+    <height>286</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>210</y>
+     <y>230</y>
      <width>161</width>
      <height>32</height>
     </rect>
@@ -36,9 +36,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>10</x>
      <y>10</y>
-     <width>211</width>
+     <width>231</width>
      <height>31</height>
     </rect>
    </property>
@@ -57,7 +57,7 @@
   <widget class="QLineEdit" name="lineEdit_OldPW">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>90</x>
      <y>60</y>
      <width>131</width>
      <height>20</height>
@@ -67,7 +67,7 @@
   <widget class="QLineEdit" name="lineEdit_NewPW_1">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>90</x>
      <y>100</y>
      <width>131</width>
      <height>20</height>
@@ -77,8 +77,8 @@
   <widget class="QLineEdit" name="lineEdit_NewPW_2">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>140</y>
+     <x>90</x>
+     <y>170</y>
      <width>131</width>
      <height>20</height>
     </rect>
@@ -87,9 +87,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>0</x>
      <y>60</y>
-     <width>51</width>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
@@ -105,7 +105,7 @@
     <rect>
      <x>0</x>
      <y>100</y>
-     <width>71</width>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
@@ -120,8 +120,8 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>140</y>
-     <width>71</width>
+     <y>170</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
@@ -136,13 +136,35 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>180</y>
+     <y>200</y>
      <width>111</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>Show PIN</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>23</x>
+     <y>120</y>
+     <width>221</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="inputMethodHints">
+    <set>Qt::ImhNone</set>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;Upper and lower case, numbers, and special characters&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+   </property>
+   <property name="wordWrap">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
