--- a/stick20setup.ui
+++ b/stick20setup.ui
@@ -66,7 +66,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Change admin password</string>
+    <string>Change admin PIN</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton_Ch_PW">
