--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -107,6 +107,11 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>lineEdit</tabstop>
+  <tabstop>checkBox</tabstop>
+  <tabstop>checkBox_PasswordMatrix</tabstop>
+ </tabstops>
  <resources>
   <include location="resources.qrc"/>
  </resources>
