--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1270,5 +1270,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>cancelButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>hide()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>311</x>
+     <y>485</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>318</x>
+     <y>274</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
