--- a/stick20hiddenvolumedialog.ui
+++ b/stick20hiddenvolumedialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>291</width>
-    <height>350</height>
+    <height>376</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>310</y>
+     <y>330</y>
      <width>181</width>
      <height>32</height>
     </rect>
@@ -67,7 +67,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>140</y>
+     <y>160</y>
      <width>131</width>
      <height>21</height>
     </rect>
@@ -83,7 +83,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>140</y>
+     <y>160</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -96,7 +96,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>80</y>
+     <y>100</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -109,7 +109,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>110</y>
+     <y>130</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -122,7 +122,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>80</y>
+     <y>100</y>
      <width>61</width>
      <height>22</height>
     </rect>
@@ -135,7 +135,7 @@
    <property name="geometry">
     <rect>
      <x>190</x>
-     <y>110</y>
+     <y>130</y>
      <width>61</width>
      <height>22</height>
     </rect>
@@ -148,7 +148,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>290</y>
+     <y>310</y>
      <width>141</width>
      <height>21</height>
     </rect>
@@ -161,7 +161,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>170</y>
+     <y>190</y>
      <width>71</width>
      <height>21</height>
     </rect>
@@ -174,7 +174,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>170</y>
+     <y>190</y>
      <width>131</width>
      <height>21</height>
     </rect>
@@ -190,7 +190,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>210</y>
+     <y>230</y>
      <width>251</width>
      <height>21</height>
     </rect>
@@ -205,10 +205,10 @@
   <widget class="QLabel" name="HVSdCardHighWaterMark">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>10</x>
      <y>39</y>
-     <width>221</width>
-     <height>31</height>
+     <width>271</width>
+     <height>51</height>
     </rect>
    </property>
    <property name="text">
@@ -217,12 +217,15 @@
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
+   <property name="wordWrap">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="HVEntropieRandChars">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>230</y>
+     <y>250</y>
      <width>251</width>
      <height>21</height>
     </rect>
@@ -238,7 +241,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>250</y>
+     <y>270</y>
      <width>251</width>
      <height>21</height>
     </rect>
