--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,12 @@
 <RCC>
     <qresource prefix="/images">
         <file>CS_icon.png</file>
+        <file>quit.ico</file>
+        <file>safe.ico</file>
+        <file>safe2.ico</file>
+        <file>settings.ico</file>
+        <file>harddrive.ico</file>
+        <file>about.ico</file>
         <file>ProgressWheel.GIF</file>
     </qresource>
 </RCC>
